# geode-deps

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: multi-platform.yml
src/: helpStrings.hpp  main.cpp
src/add/: add.cpp  add.hpp
src/argparse/: argparse.cpp  argparse.hpp
src/delete/: delete.cpp  delete.hpp
